Final changes to GUI

--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
                 this.monochrome = [ 128, 0, 255, 1.0 ];
                 //this.monochrome = [ 255, 255, 255, 1.0 ];
                 this.gui;
-                this.visualize = 'spiro';
-                this.spiroType = '3D';
+                this.visualize = 'tonnetz';
+                this.spiroType = '2D';
                 this.scale3D = 1;
                 this.rotateX = 0;
                 this.rotateY = 0;
